--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,8 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>	
 	<script src="js/timeago.js"></script>		
 	<meta name="viewport" content="width=320, initial-scale=1, user-scalable=no"> 
+	<link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
+	<meta name="apple-mobile-web-app-capable" content="yes">	
 </head>
 <body>
 	<div class="content">
