--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,11 +4,16 @@
   }
   
 *{
+	padding:0;
+	margin:0;
 	font-family: din;
 	font-size:48px;
 	background-color:#000;
 	color:#6fc;
 	text-transform:uppercase;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; /* Disable selection/Copy of UIWebView */
+    -webkit-tap-highlight-color:rgba(0,0,0,0);	
 }
 
 .content{
@@ -37,8 +42,8 @@
 }
 
 #modal {
-  width:600px;
-  height:160px;
+  width:300px;
+/*  height:160px;*/
   margin-top:100px;
   position:relative;
   margin-left: auto;
@@ -50,14 +55,57 @@
 }
 
 input{
+	font-size:48px;
 	width: 100%;
 	border:none;
 	text-align:center;
 	outline: none;
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+.name{
+	padding:0;
+	margin:0;
+	height:80px;
+}
+
+.coffeeTime{
+	background-color:#6fc;
+	color:#000;
+	width:100%;
+	cursor:pointer;
 }
 
 .button{
+	height:80px;
 	background-color:#6fc;
 	color:#000;
 	cursor:pointer;
+}
+
+.button:hover{
+	background-color:#fff;
+	color:#6fc;
+}
+
+#justmadecoffee{
+	width:100%;
+	position:fixed;
+	bottom:0;
+}
+
+@media (max-width: 350px) {
+	*{
+		font-size:32px;
+	}
+
+	#justmadecoffee{
+		width:100%;
+		position:fixed;
+		bottom:0;
+		height:48px;
+	}
+
+
 }
