--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@
 	color:#6fc;
 	text-transform:uppercase;
     -webkit-touch-callout: none;
-    -webkit-user-select: none; /* Disable selection/Copy of UIWebView */
+/*    -webkit-user-select: none; /* Disable selection/Copy of UIWebView */*/
     -webkit-tap-highlight-color:rgba(0,0,0,0);	
 }
 
