--- a/views/index.erb
+++ b/views/index.erb
@@ -70,7 +70,7 @@ var updateDisplay = function(){
 		hours = hours-(days*24);
 		minutes = minutes-(days*24*60)-(hours*60);
 		seconds = seconds-(days*24*60*60)-(hours*60*60)-(minutes*60);
-		var string = hours + 'H:' + minutes + 'M:' + seconds + 'S'
+		var string = hours + 'H:' + minutes + 'M:' + seconds + 'S AGO'
 		$('.coffeeTime').html(string);	
 	}
 
