--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,9 @@
     -webkit-tap-highlight-color:rgba(0,0,0,0);	
 }
 
+a{
+	text-decoration:none;
+}
 .content{
 	padding-top:100px;
 	text-align:center;
@@ -70,7 +73,8 @@ input{
 	height:80px;
 }
 
-.coffeeTime{
+.coffeeTime,
+.coffeeMaker{
 	background-color:#6fc;
 	color:#000;
 	width:100%;
@@ -84,6 +88,8 @@ input{
 	cursor:pointer;
 }
 
+.coffeeTime:hover,
+.coffeeMaker:hover,
 .button:hover{
 	background-color:#fff;
 	color:#6fc;
