hooked up mo stuff

--- a/views/user.erb
+++ b/views/user.erb
@@ -9,10 +9,11 @@
 </head>
 <body>
 	<div class="content">
-		  <% settings.mongo_db['coffeeBrewed'].find(:user => params[:user]).to_a.each do |coffee| %>
+		  <% settings.mongo_db['coffeeBrewed'].find(:user => params[:user]).sort(:datetime => -1).to_a.each do |coffee| %>
 		  <div class="usercoffee">
-			  <%= coffee['user'] %>
-			  <%= Time.at( coffee['datetime'].to_i / 1000).localtime.getlocal("-04:00").strftime("%H:%M:%S %a %b %d %Y") %>			  
+			  <%= coffee['user'] %><br>
+			  <%= Time.at( coffee['datetime'].to_i / 1000).localtime.getlocal("-04:00").strftime("%H:%M:%S") %><br>			  
+			  <%= Time.at( coffee['datetime'].to_i / 1000).localtime.getlocal("-04:00").strftime("%a %b %d %Y") %>			  
 		  </div>
 		  <% end %>
 		
