--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,7 @@ input{
 .coffeeMaker:hover,
 .button:hover{
 	background-color:#fff;
-	color:#6fc;
+	color:#000;
 }
 
 #justmadecoffee{
@@ -101,9 +101,21 @@ input{
 	bottom:0;
 }
 
+.usercoffee{
+	margin-left:auto;
+	margin-right:auto;
+	width:600px;
+	background-color:rgba(255,255,255,0.1);
+	border:1px #6fc solid;
+}
+
+.usercoffee:hover{
+	background-color:rgba(255,255,255,0.2);
+}
+
 @media (max-width: 350px) {
 	*{
-		font-size:32px;
+		font-size:28px;
 	}
 
 	#justmadecoffee{
@@ -111,6 +123,10 @@ input{
 		position:fixed;
 		bottom:0;
 		height:48px;
+	}
+	
+	.usercoffee{
+		width:300px;
 	}
 
 
