--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,6 +109,10 @@ input{
 	border:1px #6fc solid;
 }
 
+.usercofeecontainer{
+	margin-bottom:120px;
+}
+
 .usercoffee:hover{
 	background-color:rgba(255,255,255,0.2);
 }
